Task5/admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-backend
  namespace: dev
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end

---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-to-frontend
  namespace: dev
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
